styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

::-webkit-scrollbar {
  width: 10px;
  border-radius: 3px;
}

::-webkit-scrollbar-track {
  background: #ddd;
  border-radius: 3px;
}

::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 3px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
  border-radius: 3px;
}

body,
html {
  height: 100%;
  font-family: Anuphan;
  background-color: #f0f0f0;
}

a {
  text-decoration: none;
  color: #000;
}

a:hover {
  color: rgb(243, 108, 39);
}

.container {
  display: flex;
  height: 100%;
  width: 100%;
}

/* Navigation bar */
.navbar {
  background-color: #000;
  width: 60px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  padding-top: 20px;
  position: fixed;
  height: 100%;
}

/* Items in navigation bar, including logo, and other three main icons */
.nav-items {
  list-style: none;
  padding: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 100%;
  /* Ensures the settings icon can align to the bottom */
}

.nav-items li {
  margin: 10px 0;
  /* Adjust spacing */
  width: 60px;
  height: 60px;
}

.nav-items li img.navicon {
  display: none;
}

.nav-items li.navicon {
  background-color: #FFFFFF;
}

.nav-items li.navicon img {
  display: none;
}

.nav-items li.navicon img.navicon {
  display: block;
}

.nav-items li a {
  display: flex;
  justify-content: center;
  /* Centers the icon horizontally */
  align-items: center;
  /* Centers the icon vertically */
  height: 60px;
  /* Standard height for all icons */
}

.nav-items li img {
  width: 25px;
  /* Default width for non-bird icons */
  height: auto;
}

.navicon-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 60px;
  background-color: #FFFFFF;
  /* White background */
}

.nav-grouped-icons {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* Center the icons horizontally within the column */
  flex-grow: 1;
  /* This will allow the section to expand to fill available space */
  padding: 60px 0;
  /* Add padding to top and bottom for better spacing */
  margin: 20px 0;
}

/* Ensure icons within grouped-icons have minimal margin to reduce spacing */
.nav-grouped-icons li {
  margin: 0 2px;
  /* Reduced margin to bring icons closer together */
}


/* .home-icon {
  background-color: #CCCCCC;
  /* Light gray background */
/* } */ 

.nav-setting {
  margin-top: auto;
  /* Pushes it to the bottom of the navbar */
}

.all-content {
  flex-grow: 1;
  padding: 40px;
  margin-left: 60px;
  /* Adjusted to align with the navbar width */
  display: flex;
  flex-direction: column;
  align-items: center;
}

.top-box {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: -20px;
}

/* .top-icon img {
  display: block;
  width: 64px;
  height: 64px;
  border-radius: 50%;
} */

header {
  text-align: center;
}

header h1 {
  font-size: 56px;
  font-weight: normal;
  font-family: Anuphan Arial, Helvetica, sans-serif;
  margin-bottom: 10px;
}

header p {
  font-size: 22px;
  font-family: Anuphan, Arial, Helvetica, sans-serif;
}

/* Existing styles for the search bar */
.search-bar {
  display: flex;
  justify-content: center;
  width: 100%;
  margin-top: 1px;
}

.search-bar input[type="text"] {
  padding: 8px 8px 8px 38px;
  width: 380px;
  border: 0;
  border-bottom: 1px solid #000;
  outline: none;
  background: url(./picture/icon-search.png) no-repeat center left / 24px;
  font-size: 28px;
}

.autocomplete {
  position: relative;
  width: 380px; 
}

#suggestions-List {
  position: absolute;
  top: 40px; 
  left: 0;
  width: 100%;
  border: 1px solid #000000;
  border-top: none;
  background-color: white;
  max-height: 150px;
  overflow-y: auto;
  z-index: 1000;
  display: none; /* Start hidden */
}

#suggestions-List li {
  padding: 8px 10px;
  cursor: pointer;
  font-size: 18px; 
}

#suggestions-List li:hover {
  background-color: #f0f0f0;
}


/* .search-bar button {
  padding: 8px 15px;
  background-color: rgb(243, 108, 39);
  border: none;
  color: white;
  cursor: pointer;
} */

.timeframe-buttons {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  width: auto;
}

.timeframe-buttons button {
  padding: 6px 16px;
  margin: 0 6px;
  border: none;
  color: #333;
  cursor: pointer;
  background-color: rgb(243 194 174);
  border-radius: 18px;
  font-size: 18px;
  width: 120px;
}

.timeframe-buttons button:hover,
.timeframe-buttons button.active {
  background-color: rgb(243, 108, 39);
}

.timeframe-buttons button.selected {
  background-color: rgb(243, 108, 39);
  color: black;
}

main {
  position: relative;
  flex-grow: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 30px;
  background-color: rgb(194, 194, 194);
  border-radius: 16px;
}

#map {
  width: 100%;
  height: 100%;
}

.map-fixed {
  position: absolute;
  bottom: 30%;
  display: flex;
  align-items: end;
}

.map-item {
  cursor: pointer;
  width: 96px;
  height: auto;
}

.map-tips {
  width: 300px;
  min-height: 200px;
  padding: 10px 15px;
  height: auto;
  /* border: 1px solid #666; */
  background: #fff;
  border-radius: 16px;
  position: relative;
  padding-bottom: 52px; /* Increased to make room for the button and image */
}

.tips-title {
  display: flex;
  align-items: center;
  justify-content: space-between;
  line-height: 20px;
  border-bottom: 1px solid #666;
  padding-bottom: 6px;
}

.tips-title h2 {
  margin: 0;
  font-size: 18px;
}

.tips-msg {
  cursor: pointer;
  text-decoration: none;
}

.google-maps-link {
  color: blue;
  font-size: 14px;
}

.google-maps-link:hover {
  text-decoration: underline;
}

.tips-content {
  line-height: 20px;
  padding-top: 15px;
  font-family: Anuphan, sans-serif;
  font-size: 15px;
}

.tips-footer {
  position: absolute;
  bottom: 10px;
  left: 15px;
  right: 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.more-btn {
  padding: 5px 10px;
  background-color: rgb(243, 108, 39);
  color: black;
  border: none;
  border-radius: 15px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  width: 80px;
}

.more-btn:hover {
  background-color: rgb(243 194 174);
}




.picture-item {
  position: relative;
  width: 100%;
  border-radius: 32px;
  overflow: hidden;
}

.picture-item img {
  display: block;
  width: 100%;
  object-fit: cover;
}

.picture-item p {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  line-height: 50px;
  text-align: center;
  box-sizing: border-box;
  padding: 0 10px;
  color: #ccc;
  font-size: 20px;
  background: rgba(0, 0, 0, 0.6);
}

.right-info {
  display: flex;
  flex-direction: column;
  width: 25%;
  padding: 40px 40px 40px 10px;
}

.record-buttons {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  width: auto;
}

/* .right-info .record-buttons {
  display: flex;
} */

.record-buttons button {
  padding: 6px 6px;
  margin: 0 6px;
  border: none;
  color: #333;
  cursor: pointer;
  background-color: rgb(243, 108, 39);
  border-radius: 18px;
  font-size: 18px;
  width: 155px;
}

.record-buttons button:hover,
.record-buttons button.active {
  background-color: rgb(243 194 174);
}

/* .right-info .record-buttons .button {
  padding: 18px;
  font-size: 24px;
  border-radius: 40px;
} */

.right-info .right-content {
  flex: 1;
  margin: 20px 0 0 0;
  overflow-y: auto;
}

.right-info .right-content h2 {
  text-align: center;
  font-size: 20px;
  font-weight: normal;
  padding: 10px 0;
}

.right-info .right-content p {
  font-size: 15px;
  line-height: 26px;
}


.collect-button {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  width: auto;
}

.collect-button button {
  padding: 6px 16px;
  margin: 0 6px;
  border: none;
  color: #000000;
  cursor: pointer;
  background-color: rgb(243, 108, 39);
  border-radius: 18px;
  font-size: 20px;
  width: 100%;
}

.collect-button button:hover {
  background-color: rgb(243 194 174);
}

#loading {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  padding: 20px;
  border-radius: 5px;
  z-index: 1000;
}



.collect {
  flex-grow: 1;
  display: flex;
  width: 100%;
  margin-top: 30px;
  min-height: 0;
  font-size: 20px;
}

.collect .left-add {
  width: 30%;
  background: linear-gradient(to bottom, #ccc, #aaa);
  border-radius: 32px;
  overflow: hidden;
}

.collect .left-add img {
  max-width: 100%; 
  max-height: auto; 
  object-fit: cover; 
}

.collect .list-page {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.collect .list-page .list {
  display: flex;
  flex-wrap: wrap;
  flex: 1;
  min-height: 0;
}

.collect .list-page .list .picture-item {
  width: 30.3333%;
  height: 46%;
  margin-left: 3%;
  margin-bottom: 30px;
}

.collect .list-page .page {
  width: 100%;
  height: 50px;
  text-align: center;
  padding-left: 3%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.collect .list-page .page img {
  display: block;
  width: auto;
  height: 26px;
}

.collect .list-page .page a,
.collect .list-page .page span {
  margin: 0 6px;
}


/* For the gallery page */
.gallery * {
  box-sizing: border-box;
}

.gallery .list {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 10px 0;
}

.gallery .picture-item {
  width: 23%;
  margin-bottom: 20px;
  text-align: center;
}

.gallery .picture-item img {
  width: 100%;
  height: auto;
  aspect-ratio: 3 / 2;
  border-radius: 10px;
}

.gallery .list-page .page {
  width: 100%;
  height: 50px;
  text-align: center;
  padding-left: 3%;
  display: flex;
  align-items: center;
  justify-content: center;
  transform: translateX(-19px);
}

.gallery .list-page .page img {
  display: block;
  width: auto;
  height: 26px;
}

.gallery .list-page .page a,
.gallery .list-page .page span {
  margin: 0 6px;
}


/* The Modal (background) */
.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.4);
}

/* Modal Content */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
  max-width: 500px;
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

/* Form Styling */
#specimenForm {
  display: flex;
  flex-direction: column;
}

#specimenForm input, #specimenForm button {
  margin: 10px 0;
  padding: 5px;
}

#specimenForm button {
  background-color: rgb(243, 108, 39);
  color: white;
  border: none;
  cursor: pointer;
}

#specimenForm button:hover {
  opacity: 0.8;
}

